# router/router.go
@@ -1,22 +1,0 @@
-package router
-
-//"github.com/gin-gonic/gin"
-
-// func NewRouter() *Router {
-// 	r := gin.Default()
-// 	userRoutes(r)
-// 	//eduPayLoanRoutes(r)
-// 	return r
-// }
-
-//userRoutes for routing
-// func userRoutes(r gin.Default()) {
-
-// 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-// 	r.POST("/user/CreateUser/", cntr.CreateUser)
-// 	r.POST("/course/CreateCourse/", cntr.CreateCourse)
-// 	r.POST("/user/UpdateUserDetail/", cntr.UpdateUserDetail)
-// 	r.GET("/user/GetUserFullInfo/:EmailAddress", cntr.GetUserFullInfo)
-// 	r.POST("/question/CreateNewQuestion/", cntr.CreateNewQuestion)
-// 	r.GET("/question/FetchQuestionsByCourse/:StudentID/:CourseName", cntr.FetchQuestionsByCourse)
-// }
